--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Cover Page -->
     <section class="cover">
         <h1>Jazlynn and Dion</h1>
-        <p class="subtitle">A little scrapbook of us ♡</p>
+        <p class="subtitle">a lil tribute to us ♡</p>
 
         <div class="polaroid">
             <img src="images/cover.jpg" alt="Us Photo">
@@ -23,17 +23,18 @@
 
     <!-- Our Story -->
     <section class="story">
-        <h2>Our Story</h2>
+        <h2>The Start</h2>
 
         <div class="story-content">
             <div class="story-text">
                 <p>
-                    Here’s where you can write about how you met, your favorite memories, 
-                    the inside jokes, or the little things that made everything click.
+                    We both know how it goes. Start of senior year, 2021, econ class 
+                    at Olympian. Who would've thought a seating chart lead us here?
                 </p>
                 <p>
-                    This page is meant to feel like a soft, handwritten letter  
-                    — warm, sweet, and just for the two of you.
+                    After all of the paranoia at the start, I'm happy we are here 
+                    now and don't have to hide. I can show who I love to those important
+                    to me.
                 </p>
             </div>
 
@@ -69,23 +70,23 @@
 
     <!-- Notes / Little Memories -->
     <section class="notes">
-        <h2>Little Notes</h2>
+        <h2>Love Notes</h2>
 
         <div class="notes-grid">
 
             <div class="note">
-                <h3>My favorite moment with you</h3>
-                <p>Write something sweet here…</p>
+                <h3>Everything You've Done</h3>
+                <p>All the time, sacrifices, and money is something I can't thank you enough for.</p>
             </div>
 
             <div class="note">
-                <h3>You make me smile because</h3>
-                <p>Write another note here…</p>
+                <h3>How You Make Me Feel</h3>
+                <p>I love laughing with you, talking, and seeing you. I miss you when I'm not with you.</p>
             </div>
 
             <div class="note">
-                <h3>Songs that remind me of us</h3>
-                <p>Add songs, lyrics, or memories…</p>
+                <h3>You're Cute</h3>
+                <p>...need I say more?</p>
             </div>
 
         </div>
@@ -93,7 +94,7 @@
 
     <!-- Final Page -->
     <section class="final">
-        <h2>Thank you for flipping through our scrapbook ♡</h2>
+        <h2>Cannot wait to do this forever. ♡</h2>
         <p>- J & D -</p>
     </section>
 
