--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- Notes / Little Memories -->
     <section class="notes">
-        <h2>Love Notes</h2>
+        <h2>Why I love you</h2>
 
         <div class="notes-grid">
 
