--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="polaroid">
             <img src="images/cover.jpg" alt="Us Photo">
-            <span>Us ♡</span>
+            <span>partners in crime</span>
         </div>
     </section>
 
