--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class="subtitle">a lil tribute to us ♡</p>
 
         <div class="polaroid">
-            <img src="images/cover.jpg" alt="Us Photo">
+            <img src="images/IMGJ_2145.jpeg" alt="Us Photo">
             <span>partners in crime</span>
         </div>
     </section>
