--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class="subtitle">a lil tribute to us ♡</p>
 
         <div class="polaroid">
-            <img src="IMG_2145.jpeg"> alt="Us Photo">
+            <img src="IMG_2145.jpeg">
             <span>partners in crime</span>
         </div>
     </section>
