--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="story-image taped">
-                <img src="IMG_4599.jpeg" alt="Story Photo">
+                <img src="IMG_4599.jpeg" 
             </div>
         </div>
     </section>
