--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
         <div class="gallery-grid">
 
             <div class="polaroid small">
-                <img src="images/photo1.jpg" alt="">
+                <img src="IMG_8320.jpeg" alt="">
                 <span>Memory 1</span>
             </div>
 
             <div class="polaroid small tilted-left">
-                <img src="images/photo2.jpg" alt="">
+                <img src="IMG_2253.jpeg" alt="">
                 <span>Memory 2</span>
             </div>
 
             <div class="polaroid small tilted-right">
-                <img src="images/photo3.jpg" alt="">
+                <img src="IMG_4764.jpeg" alt="">
                 <span>Memory 3</span>
             </div>
 
