--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 
             <div class="polaroid small">
                 <img src="IMG_8320.jpeg" alt="">
-                <span>Memory 1</span>
+                <span>11•9•25</span>
             </div>
 
             <div class="polaroid small tilted-left">
                 <img src="IMG_2253.jpeg" alt="">
-                <span>Memory 2</span>
+                <span>8•28•25</span>
             </div>
 
             <div class="polaroid small tilted-right">
                 <img src="IMG_4764.jpeg" alt="">
-                <span>Memory 3</span>
+                <span>3•22•24</span>
             </div>
 
         </div>
