--- a/index.html
+++ b/index.html
@@ -98,5 +98,19 @@
         <p>- J & D -</p>
     </section>
 
+<div class="scrapbook-section">
+    <a href="YOUR_PLAYLIST_LINK_HERE" target="_blank">
+        <img src="vinyl.png" class="scrap-vinyl" alt="Playlist Vinyl">
+    </a>
+
+    <div class="scrap-note">
+        <p>This playlist reminds me of us, Dion ♡  
+        — Love, Jazlynn</p>
+    </div>
+
+    <img src="tape.png" class="tape top-left">
+    <img src="tape.png" class="tape top-right">
+</div>
+
 </body>
 </html>
