--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
 
 <div class="scrapbook-section">
-    <a href="YOUR_PLAYLIST_LINK_HERE" target="_blank">
+    <a href="https://open.spotify.com/playlist/11nvWstQvO5PJxiqkxPC8Q?si=s-emduDrTaq0euPYA1zjqw&pt=b377c3ed50c32ea6c413920a3bf571ea&pi=TExO_5pkSmanW" target="_blank">
         <img src="vinyl.png" class="scrap-vinyl" alt="Playlist Vinyl">
     </a>
 
