--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </a>
 
     <div class="scrap-note">
-        <p>This playlist reminds me of us, Dion ♡  
+        <p>some love tunes that remind me of you :)   
         — Love, Jazlynn</p>
     </div>
 
