--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Final Page -->
     <div class="scrapbook-section">
     <a href="https://open.spotify.com/playlist/11nvWstQvO5PJxiqkxPC8Q?si=s-emduDrTaq0euPYA1zjqw&pt=b377c3ed50c32ea6c413920a3bf571ea&pi=TExO_5pkSmanW" target="_blank">
-        <img src="vinyl.png" class="scrap-vinyl" alt="Playlist Vinyl">
+        <img src="IMG_0970.jpeg" class="scrap-vinyl" alt="Playlist Vinyl">
     </a>
 
     <div class="scrap-note">
