--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
     </a>
 
     <div class="scrap-note">
-        <p>some love tunes that remind me of you :)   
-        
-        — Love, Jazlynn</p>
+        <p>some love tunes that remind me of you :)   </p>
 </div>
 
     <section class="final">
