--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <div class="scrap-note">
         <p>some love tunes that remind me of you :)   </p>
 </div>
+</section>
 
     <section class="final">
         <h2>Cannot wait to do this forever. ♡</h2>
