--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div class="note">
                 <h3>How You Make Me Feel</h3>
-                <p>I love laughing with you, talking, and seeing you. I miss you when I'm not with you.</p>
+                <p>I love laughing with you, talking, and seeing you. I miss you when we're not together.</p>
             </div>
 
             <div class="note">
