--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
     </section>
 
     <!-- Final Page -->
-    <div class="scrapbook-section">
-    <a href="https://open.spotify.com/playlist/11nvWstQvO5PJxiqkxPC8Q?si=s-emduDrTaq0euPYA1zjqw&pt=b377c3ed50c32ea6c413920a3bf571ea&pi=TExO_5pkSmanW" target="_blank">
+<!-- Playlist Section -->
+<div class="scrapbook-section">
+    <a href="https://open.spotify.com/playlist/11nvWstQvO5PJxiqkxPC8Q?si=s-emduDrTaq0euPYA1zjqw" target="_blank">
         <img src="IMG_0974.jpeg" class="scrap-vinyl" alt="Playlist Vinyl">
     </a>
 
     <div class="scrap-note">
-        <p>some love tunes that remind me of you :)   </p>
+        <p>some love tunes that remind me of you :)</p>
+    </div>
 </div>
+
+<!-- Final Page -->
+<section class="final">
+    <h2>Cannot wait to do this forever. ♡</h2>
+    <p>- J & D -</p>
 </section>
-
-    <section class="final">
-        <h2>Cannot wait to do this forever. ♡</h2>
-        <p>- J & D -</p>
-    </section>
-</div>
-
 
 </body>
 </html>
