--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <p class="subtitle">a lil tribute to us ♡</p>
 
         <div class="polaroid">
-            <img src="IMG_2145.jpeg"
-            <span>partners in crime</span>
+            <img src="IMG_2145.jpeg" alt="">
+            <span class="caption">partners in crime</span>
         </div>
     </section>
 
@@ -40,7 +40,7 @@
             </div>
 
             <div class="story-image taped">
-                <img src="IMG_4599.jpeg" 
+                <img src="IMG_4599.jpeg" alt="">
             </div>
         </div>
     </section>
@@ -82,7 +82,7 @@
 
             <div class="note">
                 <h3>How You Make Me Feel</h3>
-                <p>I love laughing with you, talking, and seeing you. I miss you when we're not together.</p>
+                <p>I love laughing with you, talking, and seeing you. I miss you when I'm not with you.</p>
             </div>
 
             <div class="note">
@@ -94,22 +94,20 @@
     </section>
 
     <!-- Final Page -->
-<!-- Playlist Section -->
-<div class="scrapbook-section">
-    <a href="https://open.spotify.com/playlist/11nvWstQvO5PJxiqkxPC8Q?si=s-emduDrTaq0euPYA1zjqw" target="_blank">
-        <img src="IMG_0974.jpeg" class="scrap-vinyl" alt="Playlist Vinyl">
-    </a>
+    <div class="scrapbook-section">
+        <a href="https://open.spotify.com/playlist/11nvWstQvO5PJxiqkxPC8Q?si=s-emduDrTaq0euPYA1zjqw&pt=b377c3ed50c32ea6c413920a3bf571ea&pi=TExO_5pkSmanW" target="_blank">
+            <img src="IMG_0974.jpeg" class="scrap-vinyl" alt="Playlist Vinyl">
+        </a>
 
-    <div class="scrap-note">
-        <p>some love tunes that remind me of you :)</p>
+        <div class="scrap-note">
+            <p>some love tunes that remind me of you :)</p>
+        </div>
     </div>
-</div>
 
-<!-- Final Page -->
-<section class="final">
-    <h2>Cannot wait to do this forever. ♡</h2>
-    <p>- J & D -</p>
-</section>
+    <section class="final">
+        <h2>Cannot wait to do this forever. ♡</h2>
+        <p>- J & D -</p>
+    </section>
 
 </body>
 </html>
